Extracts Listing table representation in Listing.java. Fixes JSON parsing.